hook implementations
Change-Id: Ie5f1624651de195a392637d7be57e80a71756746